tests/models/enum/unnamed/f64/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        f64
    ),
}
fn main() {}
